# ultimate_rag_showdown

./: .env.sample  .gitignore  1_download_documents.ipynb  2_generate_synthetic_testset.ipynb  3_knowledgebases_for_bedrock.ipynb  4_kendra_rag.ipynb  5_opensearch_rag.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json
opensearch-cdk/: cdk.json  package-lock.json  package.json
opensearch-cdk/lambda/litellm-on-lambda/: run.sh
opensearch-cdk/lib/: litellm-lambda-cdk-stack.ts  opensearch-cdk-stack.ts
ragas/.cache/japanese/: answer_formulate.json  compress_question.json  evolution_elimination.json  filter_question.json  find_relevant_context.json  keyphrase_extraction.json  multi_context_question.json  reasoning_question.json  rewrite_question.json  score_context.json  seed_question.json
