[tool.poetry]
name = "ultimate-rag-showdown"
version = "0.1.0"
description = ""
authors = ["moritalous <moritalous@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.13"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.21"
ragas = "^0.1.13"
python-dotenv = "^1.0.1"
html2text = "^2024.2.26"
ipywidgets = "^8.1.3"
boto3 = "^1.34.160"
opensearch-py = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
